# ultimate-recovery-temp

./: .gitignore  STAGE1_SUMMARY.md  STAGE2_IMPLEMENTATION.md  TASK.md  all_links.json  build.sh  organize_data.py  recover.py  requirements.txt
accelerator/: Cargo.toml
accelerator/src/: clusterer.rs  exfat.rs  fragment_linker.rs  lib.rs  simd_search.rs  types.rs
accelerator/src/matcher/: mod.rs  patterns.rs  validator.rs
accelerator/src/scanner/: parallel.rs
docs/: exfat_recovery_strategy.md  recovery_research.md
rust-recovery/: Cargo.toml  README.md  STAGE1_COMPLETION.md  STAGE2_SUMMARY.md  STAGE2_VERIFICATION.md  VERIFICATION.md  create_optimization_test.py
rust-recovery/benches/: stage1_bench.rs
rust-recovery/output_opt/: session.info
rust-recovery/output_opt/01_RECOVERED_FILES/: recovered_0001_Title Secret Plan.txt
rust-recovery/output_opt/reports/: recovery_report_20260210_140953.html  recovery_report_20260210_140953.json  recovery_report_20260210_141142.html  recovery_report_20260210_141142.json  recovery_report_20260210_141459.html  recovery_report_20260210_141459.json
rust-recovery/scripts/: profile_metal.sh
rust-recovery/src/: checkpoint.rs  cli.rs  disk.rs  entropy.rs  error.rs  exfat.rs  fragment_linker.rs  lib.rs  main.rs  numa.rs  simd_block_scanner_asm.rs  simd_search.rs  simd_search_asm.rs  smart_separation.rs  stream_solver.rs  types.rs  types_aligned.rs
rust-recovery/src/matcher/: mod.rs  patterns.rs  validator.rs
rust-recovery/src/recovery/: cleaner.rs  mod.rs  reconstructor.rs
rust-recovery/src/report/: mod.rs
rust-recovery/src/report/templates/: report.html
rust-recovery/src/scanner/: mod.rs  parallel.rs
rust-recovery/src/tui/: mod.rs  widgets.rs
rust-recovery/templates/: report.html
scripts/: build.sh  download_samples.py  download_subs.py
src/: __init__.py  candidate_manager.py  checkpoint_manager.py  cluster_analyzer.py  directory_structure.py  file_reconstructor.py  fragment_assembler.py  hotkey_controller.py  index_generator.py  live_dashboard.py  modern_ui.py  professional_report.py  python_scanner.py  semantic_assembler.py  semantic_classifier.py
tests/: test_audit_fixes.py  (+4 more)
