[package]
name = "rust_accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1.10.0"
lazy_static = "1.4.0"
ahash = "0.8.0"
rayon = "1.8.0"
memmap2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
html-escape = "0.2"
rusqlite = { version = "0.30", features = ["bundled"] }
# v6.1 Forensic additions
sha2 = "0.10"           # SHA-256 hashing for evidence integrity

