[package]
name = "rust-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Memory mapping for zero-copy disk access
memmap2 = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.10"

# Async runtime and channels
tokio = { version = "1.40", features = ["sync"] }

# Pattern matching and validation
regex = "1.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-escape = "0.2"
sha2 = "0.10"
ahash = "0.8"
